フラッシュメッセージの位置を変更、アイテム更新失敗時にエラーメッセージがでるように変更、エラーメッセージを変更

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -1,6 +1,9 @@
 ja:
   activerecord:
     models:
+      user: ユーザー
+      post: アイテム
+      comment: 口コミ
       attributes:
         user:
           email: メールアドレス
@@ -12,7 +15,7 @@ ja:
         post:
           title: タイトル
           image: 画像ファイル
-          genre: ジャンル
+          category_id: ID
           price: 価格
     errors:
       messages:
